analogue Change Log

Version 0.5-3

	* tran: new function to apply common transformations and 
	standardizations applicable to palaeoecolgical data.

Version 0.5-2

	* wa: classical deshrinking did not work, but returned the
	original 'env' variable. Currently a bit inelegant
	implementation. 
	
	* wa: implemented deshrink = "none" just for comparison and for
	connoisseurs. 

	* wa: deshrink = "expanded" is now public and user-callable.

	* join: now checks for inherits(foo, "data.frame") to confirm
	if all objects to join are (or inherit from) data frames. This
	allows join to work on objects of class "join" when split = FALSE
	is used.
	
Version 0.5-1

	* New developer: Jari Oksanen has joined the analogue team!

	* predict.wa: was not returning some attributes of the WA model
	fitted. This was causing some print and other methods to fail.

	* expand.deshrink: implemented simple expansion of variances as a
	deshrinking method a bit like in vegan:::wascores.  The function
	has similar API as other deshrinking functions: takes only WA and
	obs values as input, and returns expanded scores and two linear
	coefficients to perform the deshrinking.  Slope is given by the
	expansion ratio and intercept is defined so that the line goes
	through mean(x), mean(y) point.  The vegan function equalizes
	weighted variances, but this function only uses simple variances:
	incorporating weights would mean changing call API. At the moment
	the function is not yet used anywhere, but just sits there waiting
	for possible use.

	* wa, mat models: residuals are now calculated as predicted -
	observed.  This reverses the sign from the previous version. There
	was inconsistency in the way residuals were being calculated in
	MAT models and help functions. Now resolved.

	* plot.mat: now plots the absolute value of the average or maximum
	bias statistics, rather than the actual value. This ensures that
	the "optimal" model is the one with the lowest value on the plot.
